src/objects/zqu__Quote__c.object
<CustomObject>
    <fields>
        <fullName>Acquisition_Channel__c</fullName>
        <label>Acquisition Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Call Centre</fullName>
                </value>
                <value>
                    <fullName>TCUK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CampaignCode__c</fullName>
        <formula>Tcode__r.Name</formula>
        <label>Campaign Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Description__c</fullName>
        <formula>Tcode__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Payment_Details__c</fullName>
        <label>Default Payment Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Payment_Method_Type__c</fullName>
        <label>Default Payment Method Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Time__c</fullName>
        <label>Expiration Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extend_Quote_14_days__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked - Quote is extended for another 14 days</description>
        <inlineHelpText>When checked - Quote is extended for another 14 days</inlineHelpText>
        <label>Extend Quote (14 days)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Quote Amendments</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mid_term_Discount_Reason__c</fullName>
        <description>This field is used in the manage mid term discounts visual force page &quot;Zuora_ManageMidTermDiscounts&quot;. The decision was taken to have it on quote as a picklist field will be user for future maintenance than custom settings.</description>
        <label>Mid-term Discount Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Editorial</fullName>
                </value>
                <value>
                    <fullName>Lack of content</fullName>
                </value>
                <value>
                    <fullName>App performance</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>No compatible devices</fullName>
                </value>
                <value>
                    <fullName>Lack of time</fullName>
                </value>
                <value>
                    <fullName>Functionality</fullName>
                </value>
                <value>
                    <fullName>Product switch</fullName>
                </value>
                <value>
                    <fullName>Not known</fullName>
                </value>
                <value>
                    <fullName>Political</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Ill health</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Subscription_Offer_Codes_Count__c</fullName>
        <description>This count will be only the count Quote Offer Code record with type acquisition offer and Default offer. We will exclude mid term discounts from this roll up field.</description>
        <label>New Subscription Offer Codes Count</label>
        <summaryFilterItems>
            <field>Quote_Offer_Code__c.Type__c</field>
            <operation>notEqual</operation>
            <value>Mid Term Discount</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Offer_Code__c.Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Outbound_Customer_Email__c</fullName>
        <label>Outbound Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Outbound_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outbound POC</label>
        <referenceTo>POC__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outbound_Payment_Frequency__c</fullName>
        <label>Outbound Payment Frequency</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Selected_Product__c</fullName>
        <label>Outbound Selected Product</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Start_Periods__c</fullName>
        <description>Number of periods to be apply start price. In case of Annual subscription StartPeriod will not be passed</description>
        <label>Outbound Start Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outbound_Start_Price__c</fullName>
        <label>Outbound Start Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outbound_Subsequent_Price__c</fullName>
        <label>Outbound Subsequent Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Related Quotes</relationshipLabel>
        <relationshipName>PreviousQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Subscription_RatePlan_Term_Type__c</fullName>
        <label>Previous Subscription RatePlan Term Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Subscription</label>
        <referenceTo>Zuora__Subscription__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PromoCode__c</fullName>
        <label>Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Country__c</fullName>
        <formula>IF( zqu__BillToContact__r.MailingCountry=&apos;GB&apos; ,&apos;UK&apos; , &apos;International&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Next_Charge_Date__c</fullName>
        <label>Subscription Next Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Origin__c</fullName>
        <label>Subscription Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                    <default>true</default>
                    <label>Inbound</label>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Coupon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Rate_Plan_Term_Type__c</fullName>
        <label>Subscription Rate Plan Term Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tcode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tcode</label>
        <referenceTo>TCodeManagement__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>arePaymentDetailsEntered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>arePaymentDetailsEntered</label>
        <type>Checkbox</type>
    </fields>
    <pluralLabel>Quotes</pluralLabel>
</CustomObject>